# microecc

./: CMakeLists.txt  Jenkinsfile  README.md  asm_avr.inc  conanfile.py
include/: asm_arm.inc  curve-specific.inc  uECC.h  uECC_vli.h
microecc-py/: .gitignore  README.md  setup.py
microecc-py/microecc_py/: __init__.py  test_microecc_py.py
python/: .gitignore  README.md  requirements.txt  setup.py
python/microecc_py/: __init__.py  test_microecc_py.py
src/: CMakeLists.txt  uECC.c
tests/: CMakeLists.txt  test.c  test_compress.c  test_compute.c  test_ecdh.c  test_ecdsa.c  tests.c  tests.h
tests/Unity/: unity.c
